--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,6 @@ github_username:  dandananddada
 permalink: /:categories/:title
 # Build settings
 markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 paginate: 5
